--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/css/jquery-ui.min.css" type="text/css">
   <link rel="stylesheet" href="%PUBLIC_URL%/css/slicknav.min.css" type="text/css">
   <link rel="stylesheet" href="%PUBLIC_URL%/css/style.css" type="text/css">
-  <title>HqCoGroup</title>
+  <title>HQ Company</title>
 </head>
 
 <body>
